@@ -1,2 +1,3 @@
 DIST TAUOLA.1.1.3.tar.gz 7152535 SHA256 9b9141a6460477e6cb3c53845f384740539e54540130f69373268b7c2995defc SHA512 ca0c67d61d8476715788ebd7f145bea86ffce2d2a6f5590d66dfd14551fe817d97b1527f6d160b2ea2dc195f1af478f80a5644408e4c1da5ac0ecdbaccc20624 WHIRLPOOL 1ec2b22da2e12ecc400f174ba2fe40bc2bc24e0495f0ae793b2211a5f1dcdc600f31543056a9c9900fe4d049222046604e789ec2eb809a927b26c66ff7d636da
 DIST TAUOLA.1.1.4.tar.gz 8643019 SHA256 224c0faa113f91bca62002cb7e405a8eeccfa938e49a62c146441af0ec5f6f30 SHA512 a03873925b35b16a10d8728b42ad0460d2424d879925da6b1d45dd8f88a86ac9729538e2d3a06faa0a7f70b7b0a80fa7b87bed14a82b2aae74663008c1ce5025 WHIRLPOOL 1562e99f364ae614e79c9f52042fedf89fae3edf1e25111de2e7f37ca48fd39a9d22990aae917d7477f203aa090a87930482560a76271935688bfcd5f4ed1c99
+DIST TAUOLA.1.1.5.tar.gz 11986900 SHA256 c6b026ce1b85ac72537882155aa0a5e5be6ee81e37bd469cc176bc55454541cb SHA512 1eb6e4b9b649cdd62b77d65899ae3e74cfdd0e8015d115690c020a06f0ff27c22a745db7c7acb12eeffacb9140b069c57c4135037eaf8feb26f8be32aced182a WHIRLPOOL 6f02400efe92f9730fe9b1b9ea4c519c6f06351588a6ad1266d456314564c410583315f418935c8b2252fa22169c569b5334759732dd2027911dbd9699890311
