@@ -1,6 +1,11 @@
 # ChangeLog for sci-physics/tauola
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*tauola-1.1.5 (03 Sep 2014)
+
+  03 Sep 2014; Jauhien Piatlicki <jauhien@gentoo.org> +tauola-1.1.5.ebuild:
+  version bump
 
   13 Dec 2013; Justin Lecher <jlec@gentoo.org> tauola-1.1.3.ebuild,
   tauola-1.1.4.ebuild, tauola-9999.ebuild, metadata.xml:
